--- a/TeamCode/src/main/AndroidManifest.xml
+++ b/TeamCode/src/main/AndroidManifest.xml
@@ -10,3 +10,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <application/>
 </manifest>
+
+<!-- pixy wasnt working when i edited this-->
